# lambapi

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements-freeze.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  docs.yml  pypi-deploy.yml  release.yml
docs/: Dockerfile  README.md  authentication.md  index.md  quickstart.md  requirements.txt
docs/api/: api.md  dependencies.md
docs/auth/: exceptions.md  overview.md
docs/core/: api.md  dependencies.md
docs/examples/: authentication.md  basic-api.md  basic.md
docs/getting-started/: concepts.md  installation.md  local-development.md  quickstart.md
docs/guides/: authentication.md  deployment.md  pre-commit.md  release.md
docs/stylesheets/: extra.css
docs/tutorial/: basic-api.md  cors.md  dependency-injection.md
examples/: 01_quickstart.py  02_basic_crud.py  03_authentication.py  04_advanced_features.py  README.md  auth_example.py  basic_app.py  cors_example.py  custom_user_model_example.py  dependency_injection_example.py  error_handling_example.py  example_app.py  integrated_router_example.py  local_server.py  pydantic_example.py  router_example.py  simple_app.py  unified_annotation_example.py  usage_example.py  validation_example.py
examples/lambda-ecr-deploy/: Dockerfile  Dockerfile.optimized  README.md  app.py  deploy.sh  requirements.txt
examples/lambda-zip-deploy/: README.md  app.py  deploy.sh  requirements.txt
lamapi/: cli.py  core.py  cors.py  error_handlers.py  local_server.py  response.py  utils.py  validation.py
lambapi/: __init__.py  annotations.py  auth.py  base_router.py  cli.py  core.py  dependencies.py  dependency_resolver.py  dev_tools.py  error_handlers.py  exceptions.py  file_watcher.py  hot_reload.py  json_handler.py  local_server.py  request.py  response.py  router.py  server_launcher.py  template_loader.py  uvicorn_server.py  validation.py
lambapi/auth/: __init__.py  auth_router.py  base_user.py  dynamodb_auth.py
lambapi/templates/: basic_app.py  basic_readme.md  basic_template.yaml  crud_app.py  crud_readme.md  crud_requirements.txt  crud_template.yaml
scripts/: check.sh  format.sh  lint.sh  setup-pre-commit.sh  test.sh  update_version.py
tests/: test_auth.py  test_base_router.py  test_base_user.py  test_core.py  test_cors.py  test_dependencies.py  test_error_handling.py  test_integration_auth_params.py  test_local_server.py  test_new_syntax.py  test_performance.py  test_pydantic_integration.py  test_query_params.py  test_root_path.py  test_router.py  test_unified_annotations.py  test_utils.py  test_validation.py
