[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambapi"
version = "0.2.17"
description = "モダンな AWS Lambda 用 API フレームワーク"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yoshihiro Sasaki", email = "sskyh1988@gmail.com"},
]
keywords = ["lambda", "api", "aws", "serverless", "http", "rest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Lambda 環境では標準ライブラリのみを使用
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "isort>=5.0",
    "bandit[toml]>=1.7",
    "safety>=2.0",
    "watchdog>=3.0",
    "pre-commit>=3.0",
    "uvicorn[standard]>=0.24.0",
    "pynamodb>=5.0",
    "moto[dynamodb]>=4.0",
]
validation = [
    "pydantic>=2.0",
]
auth = [
    "boto3>=1.28.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "pynamodb>=5.0",
    "moto[dynamodb]>=4.0",
]

[project.scripts]
lambapi = "lambapi.cli:main"

[project.urls]
Homepage = "https://github.com/sskyh0208/lambapi"
Documentation = "https://sskyh0208.github.io/lambapi/"
Repository = "https://github.com/sskyh0208/lambapi"
"Bug Tracker" = "https://github.com/sskyh0208/lambapi/issues"

[tool.setuptools]
packages = ["lambapi"]

[tool.setuptools.package-data]
lambapi = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lambapi.auth.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unreachable = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B106", "B601"]

[tool.coverage.run]
source = ["lambapi"]
omit = [
    "*/tests/*",
    "*/test_*",
    "lambapi/cli.py",
    "lambapi/uvicorn_server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".tox",
    ".mypy_cache",
    ".pytest_cache"
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "W503",  # line break before binary operator (conflicts with black)
]
